fix(hashTag): 해시태그 리스트 가져오는 로직 수정